--- a/templates/timetable-view.html
+++ b/templates/timetable-view.html
@@ -3,14 +3,27 @@
 {% block content %}
 
 
+ <div class="container-fluid">
+
+    <div class="search">
+        <input type="text" class="searchbox" placeholder="Search...">
+        <input type="submit" value="Search" class="searchButton">
+       <input type="button" value="Download as PDF"
+            id="btPrint" class="searchButton" onclick="createPDF()" />
+
+    </div>
+
+<!--
 
 <div class="container">
     <div class="timetable-img text-center">
         <img src="img/content/timetable.png" alt="">
     </div>
 
+-->
 
-    <div class="table-responsive">
+
+    <div class="table-responsive" id ="tab">
         <table class="table table-bordered text-center">
             <thead>
             <tr class="bg-light-gray">
@@ -357,5 +370,31 @@ body{
 }
 
 </style>
+<script>
+    function createPDF() {
+        var sTable = document.getElementById('tab').innerHTML;
+
+        var style = "<style>";
+        style = style + "table {width: 100%;font: 17px Calibri;}";
+        style = style + "table, th, td {border: solid 1px #DDD; border-collapse: collapse;";
+        style = style + "padding: 2px 3px;text-align: center;}";
+        style = style + "</style>";
+
+        // CREATE A WINDOW OBJECT.
+        var win = window.open('', '', 'height=700,width=700');
+
+        win.document.write('<html><head>');
+        win.document.write('<title>Profile</title>');   // <title> FOR PDF HEADER.
+        win.document.write(style);          // ADD STYLE INSIDE THE HEAD TAG.
+        win.document.write('</head>');
+        win.document.write('<body>');
+        win.document.write(sTable);         // THE TABLE CONTENTS INSIDE THE BODY TAG.
+        win.document.write('</body></html>');
+
+        win.document.close(); 	// CLOSE THE CURRENT WINDOW.
+
+        win.print();    // PRINT THE CONTENTS.
+    }
+</script>
 
 {% endblock %}
