--- a/templates/AddRoom.html
+++ b/templates/AddRoom.html
@@ -1,25 +1,29 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
-     <div class="display">
+
+         <div class="display">
         <div class="box">
             <div class="header">
-                Classroom
+                Add Room
             </div>
+
             <div class="form">
                 <form method="POST" action="">
                     {% csrf_token %}
                     {% load crispy_forms_tags %}
                     {{ room|crispy }}
-                    <input type="submit" value="Save Class" class="saveButton">
+                    <input type="submit" value="Save Subject" class="saveButton">
                 </form>
             </div>
         </div>
 
             <img class="gif" alt="books" src="{% static 'media/21903-online-class-animation.gif' %}">
-            <div class="viewtable"><p>You can view your added classroom here.<a href="{% url 'list-room' %}">View Classrooms</a></p></div>
+            <div class="viewtable"><p>You can view your added classroom here.<a href="{% url 'list-room' %}">View Rooms</a></p></div>
 
     </div>
+
+
 
 
 {% endblock %}
