--- a/templates/AddSpeciality.html
+++ b/templates/AddSpeciality.html
@@ -2,26 +2,28 @@
 {% load static %}
 {% block content %}
 
-     <div class="display">
+
+         <div class="display">
         <div class="box">
             <div class="header">
-                Speciality
+                Add Speciality
             </div>
+
             <div class="form">
                 <form method="POST" action="">
                     {% csrf_token %}
                     {% load crispy_forms_tags %}
                     {{ speciality|crispy }}
-                    
-                    <input type="submit" value="Next" class="saveButton">
+                    <input type="submit" value="Save Subject" class="saveButton">
                 </form>
             </div>
         </div>
 
             <img class="gif" alt="books" src="{% static 'media/21903-online-class-animation.gif' %}">
-            <div class="viewtable"><p>You can view your added specialities here.<a href="{% url 'list-speciality' %}">View specialities</a></p></div>
+            <div class="viewtable"><p>You can view your added specialities here.<a href="{% url 'list-speciality' %}">View Specialities</a></p></div>
 
     </div>
+
 
 
 {% endblock %}
