--- a/templates/AddTeacher.html
+++ b/templates/AddTeacher.html
@@ -4,28 +4,26 @@
 {% block content %}
 
 
-     <div class="display">
+ <div class="display">
         <div class="box">
             <div class="header">
-                Teacher Info
+                Add Teacher
             </div>
+
             <div class="form">
                 <form method="POST" action="">
                     {% csrf_token %}
-                     {% load crispy_forms_tags %}
+                    {% load crispy_forms_tags %}
                      {{ teacher|crispy }}
-                    <input type="submit" value="Save Here" class="saveButton">
+                    <input type="submit" value="Save Subject" class="saveButton">
                 </form>
             </div>
         </div>
 
             <img class="gif" alt="books" src="{% static 'media/20135-profesor.gif' %}">
-			<div class="margin">
-            <div class="viewtable"><p>You can view your added Teachers here.<a href="{% url 'list-teacher' %}">Click Here</a></p></div>
-			</div>
+            <div class="viewtable"><p>You can view your added Teachers here.<a href="{% url 'list-teacher' %}">View Teachers></p></div>
 
     </div>
-
 
 
 
