--- a/templates/UpdateTimetable.html
+++ b/templates/UpdateTimetable.html
@@ -1,25 +1,29 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
+
      <div class="display">
         <div class="box">
             <div class="header">
-                Classroom
+                Update Timetable name
             </div>
+
             <div class="form">
                 <form method="POST" action="">
                     {% csrf_token %}
                     {% load crispy_forms_tags %}
                     {{ timetable|crispy }}
-                    <input type="submit" value="Save" class="saveButton">
+                    <input type="submit" value="Save Subject" class="saveButton">
                 </form>
             </div>
         </div>
 
-            <img class="gif" alt="books" src="{% static 'media/21903-online-class-animation.gif' %}">
-            <div class="viewtable"><p>You can view your timetables here.<a href="{% url 'list-timetable' %}">View timetables</a></p></div>
+            <img class="gif" alt="books" src="{% static 'media/21903-online-class-animation.gif' %}>
+            <div class="viewtable"><p>You can view your timetables here.<a href="{% url 'list-timetable' %}">View Timetables</a></p></div>
 
     </div>
+
+
 
 
 {% endblock %}
