--- a/templates/timetable-view.html
+++ b/templates/timetable-view.html
@@ -27,7 +27,7 @@
                             width: 500
                         }]
                     };
-                    pdfMake.createPdf(docDefinition).download("Table.pdf");
+                    pdfMake.createPdf(docDefinition).download("TimeTable.pdf");
                 }
             });
         }
