--- a/templates/timetable-view.html
+++ b/templates/timetable-view.html
@@ -3,14 +3,53 @@
 {% block content %}
 
 
- <div class="container-fluid">
+
+    <div class="container">
+
+
+
+      <div class="row mb-5">
+
+
 
     <div class="search">
+
+
         <input type="text" class="searchbox" placeholder="Search...">
         <input type="submit" value="Search" class="searchButton">
        <!--<input type="button" value="Download as PDF"
             id="btPrint" class="searchButton" onclick="createPDF()" />-->
          <input type="button" id="btnExport" value="Download to PDF" class="searchButton"onclick="Export()" />
+
+         <button class="searchButton dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              View by
+            </button>
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                <li class="dropdown-item"><a href="{% url 'timetable' timetable.timetable_id %}">Global</a></li>
+                <li class="dropdown-divider"></li>
+                <li class="dropdown-submenu">
+                  <a  class="dropdown-item" tabindex="-1" href="#">View by teacher</a>
+                  <ul class="dropdown-menu">
+
+                      {% for teacher in teachers %}
+
+
+                    <li class="dropdown-item"><a href="{% url 'timetable-teacher' timetable.timetable_id teacher.teacher_id %}">{{teacher.teacher_name}}</a></li>
+                      {% endfor%}
+                  </ul>
+                </li>
+                <li class="dropdown-submenu">
+                  <a  class="dropdown-item" tabindex="-1" href="#">View by Speciality</a>
+                  <ul class="dropdown-menu">
+
+                    {% for speciality in specialities %}
+                    <li class="dropdown-item"><a href="{% url 'timetable-speciality' timetable.timetable_id speciality.speciality_id %}">{{speciality.speciality_name}}</a></li>
+
+                      {% endfor%}
+                  </ul>
+                </li>
+              </ul>
+
 
     </div>
 
@@ -327,6 +366,54 @@ function generate() {
 </div>
 
 <style type="text/css">
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
 body{
     margin-top:20px;
 }
@@ -466,6 +553,8 @@ body{
 
         win.print();    // PRINT THE CONTENTS.
     }
-</script>-->
 
+</script>-->
+<!--<script type="text/javascript">
+</script>-->
 {% endblock %}
