update pdf download

--- a/templates/timetable-view.html
+++ b/templates/timetable-view.html
@@ -166,7 +166,7 @@ function generate() {
                                           <!--<span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13">Dance</span>
                                              <div class="margin-10px-top font-size14">9:00-10:00</div>-->
 
-                                            <p> <div class="font-size13 text-light-gray">{{ cl }}</div></p>
+                                            <p> <div class="font-size13 text-secondary">{{ cl }}</div></p>
                                         {% endif %}
                                 {% endif %}
                                     {% endfor%}
