update pdf download feature

--- a/templates/timetable-view.html
+++ b/templates/timetable-view.html
@@ -17,9 +17,9 @@
 
         <input type="text" class="searchbox" placeholder="Search...">
         <input type="submit" value="Search" class="searchButton">
-       <!--<input type="button" value="Download as PDF"
-            id="btPrint" class="searchButton" onclick="createPDF()" />-->
-         <input type="button" id="btnExport" value="Download to PDF" class="searchButton"onclick="Export()" />
+      <input type="button" value="Download as PDF"
+            id="btPrint" class="searchButton" onclick="createPDF()" />
+         <!--<input type="button" id="btnExport" value="Download to PDF" class="searchButton"onclick="Export()" />-->
 
          <button class="searchButton dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               View by
@@ -55,7 +55,7 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         function Export() {
             html2canvas(document.getElementById('tab'), {
                 onrendered: function (canvas) {
@@ -70,58 +70,8 @@
                 }
             });
         }
-    </script>
+    </script>-->
 
-<!--
-     <input type="button" onclick="generate()" value="Export To PDF" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.6/jspdf.plugin.autotable.min.js"></script>
-<script type="text/javascript">
-function generate() {
-    var doc = new jsPDF('p', 'pt', 'letter');
-    var htmlstring = '';
-    var tempVarToCheckPageHeight = 0;
-    var pageHeight = 0;
-    pageHeight = doc.internal.pageSize.height;
-    specialElementHandlers = {
-        // element with id of "bypass" - jQuery style selector
-        '#bypassme': function(element, renderer) {
-            // true = "handled elsewhere, bypass text extraction"
-            return true
-        }
-    };
-    margins = {
-        top: 150,
-        bottom: 60,
-        left: 40,
-        right: 40,
-        width: 600
-    };
-    var y = 20;
-    doc.setLineWidth(2);
-    doc.text(200, y = y + 30, "TOTAL MARKS OF STUDENTS");
-    doc.autoTable({
-        html: '#tab',
-        startY: 70,
-        theme: 'grid',
-        columnStyles: {
-            0: {
-                cellWidth: 180,
-            },
-            1: {
-                cellWidth: 180,
-            },
-            2: {
-                cellWidth: 180,
-            }
-        },
-        styles: {
-            minCellHeight: 40
-        }
-    })
-    doc.save('Marks_Of_Students.pdf');
-}
-</script>-->
 
 <!--
 
@@ -363,7 +313,7 @@ function generate() {
             </tbody>
         </table>
     </div>
-</div>
+
 
 <style type="text/css">
 
@@ -528,12 +478,12 @@ body{
 }
 
 </style>
-<!--<script>
+<script>
     function createPDF() {
         var sTable = document.getElementById('tab').innerHTML;
 
         var style = "<style>";
-        style = style + "table {width: 100%;font: 17px Calibri;}";
+        style = style + "table {width: 100%;font: 12px Calibri;}";
         style = style + "table, th, td {border: solid 1px #DDD; border-collapse: collapse;";
         style = style + "padding: 2px 3px;text-align: center;}";
         style = style + "</style>";
@@ -554,7 +504,7 @@ body{
         win.print();    // PRINT THE CONTENTS.
     }
 
-</script>-->
+</script>
 <!--<script type="text/javascript">
 </script>-->
 {% endblock %}
