fixing an err in templates

--- a/templates/AddRoom.html
+++ b/templates/AddRoom.html
@@ -13,7 +13,7 @@
                     {% csrf_token %}
                     {% load crispy_forms_tags %}
                     {{ room|crispy }}
-                    <input type="submit" value="Save Subject" class="saveButton">
+                    <input type="submit" value="Save" class="saveButton">
                 </form>
             </div>
         </div>
