--- a/templates/AddSpeciality.html
+++ b/templates/AddSpeciality.html
@@ -14,7 +14,7 @@
                     {% csrf_token %}
                     {% load crispy_forms_tags %}
                     {{ speciality|crispy }}
-                    <input type="submit" value="Save Subject" class="saveButton">
+                    <input type="submit" value="Save " class="saveButton">
                 </form>
             </div>
         </div>
