--- a/templates/AddTeacher.html
+++ b/templates/AddTeacher.html
@@ -15,7 +15,7 @@
                     {% csrf_token %}
                     {% load crispy_forms_tags %}
                      {{ teacher|crispy }}
-                    <input type="submit" value="Save Subject" class="saveButton">
+                    <input type="submit" value="Save" class="saveButton">
                 </form>
             </div>
         </div>
